# abacus

./: .gitignore  CHANGES.txt  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.md  VERSION  aclocal.m4  bootstrap.sh  build.sh  config.h.in  configure  configure.ac  msbayes.spec
cmake/Modules/: FindCheck.cmake  FindGSL.cmake
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  abacus.c  abacus.h  abacus_config.h.in  array_utils.c  array_utils.h  clandestina.im  dpdraw.c  dpdraw.h  dpdraw_main.c  erosa.im  eureject.c  eureject.h  eureject_main.c  intpart.c  intpart.h  intpart_main.c  lamarckii.im  math_utils.c  math_utils.h  msStatsDQH.c  msbayes.pl  msprior.c  msprior.h  parsing.c  parsing.h  partitionCombinatorics.c  partitionCombinatorics.h  partition_combinatorics.c  partition_combinatorics.h  partition_combinatorics_random.c  partition_combinatorics_random.h  probability.c  probability.h  regress.r  rejectinC.c  rejection.c  (+5 more)
src/abacus/: Makefile.am  bootstrap.sh  configure.ac
src/abacus/src/: Makefile.am  array_utils.h  eureject.c  eureject_main.c  math_utils.h  parsing.h  partition_combinatorics.h  stats_utils.c
src/abacus/test/: Makefile.am  check_partition_combinatoris.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  check_array_utils.c  check_eureject.c  check_math_utils.c  check_parsing.c  check_partition_combinatorics.c  check_probability.c  check_stats_utils.c  test_rng.c  test_rng.h  test_utils.c  test_utils.h
test/data/: observed_stats_extra_line.txt
