bin_PROGRAMS = \
	eureject \
	dpdraw

eureject_SOURCES = \
	eureject.c \
	eureject.h \
	eureject_main.c \
	array_utils.c \
	array_utils.h \
	math_utils.c \
	math_utils.h \
	stats_utils.c \
	stats_utils.h \
	parsing.c \
	parsing.h

eureject_LDADD = @MATHLDADD@

dpdraw_SOURCES = \
	dpdraw.c \
	dpdraw.h \
	dpdraw_main.c \
	array_utils.c \
	array_utils.h \
	partition_combinatorics.c \
	partition_combinatorics.h

dpdraw_LDADD = @MATHLDADD@
