bin_PROGRAMS = \
	eureject \
	dpdraw \
	intpart

eureject_SOURCES = \
	eureject.c \
	eureject.h \
	eureject_main.c \
	array_utils.c \
	array_utils.h \
	math_utils.c \
	math_utils.h \
	stats_utils.c \
	stats_utils.h \
	parsing.c \
	parsing.h

dpdraw_SOURCES = \
	dpdraw.c \
	dpdraw.h \
	dpdraw_main.c \
	array_utils.c \
	array_utils.h \
	partition_combinatorics.c \
	partition_combinatorics.h

intpart_SOURCES = \
	intpart.c \
	intpart.h \
	intpart_main.c \
	array_utils.c \
	array_utils.h \
	partition_combinatorics.c \
	partition_combinatorics.h

