TESTS = check_array_utils
check_PROGRAMS = check_array_utils
check_array_utils_SOURCES = check_array_utils.c $(top_builddir)/src/array_utils.h
check_array_utils_CFLAGS = @CHECK_CFLAGS@
# check_array_utils_LDADD = $(top_builddir)/src/libarray_utils.la @CHECK_LIBS@
check_array_utils_LDADD =  @CHECK_LIBS@

